// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ContentAnalysis component with language notice for someone who can change the language matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="sc-cSHVUG fzxnjC"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="sc-bdVaJa hrXKaN"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kTUwUJ hbbYoK"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-dqBHgY fnSVst sc-gxMtzJ jHoGsX"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-dfVpRl joibKz"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-gzOgki lhoBbt"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-iyvyFf fGKCic sc-hwwEjo kWQDMK"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-kPVwWT cTtTFX"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-kfGgVZ USTBC"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-esjQYD jgVmwH"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kIPQKe hUCTyR sc-eXEjpC ljKTKY"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-ibxdXY bDOEXW"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-RefOD jWfKiF"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-iQKALj qURpL sc-bwCtUz dFdpYU"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-hrWEMg fqHZyB"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-eTuwsz MXQEn"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-gwVKww ihApjs sc-hXRMBi dXdfhR"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-epnACN feJwfE"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-iQNlJl IYAbM"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-bsbRJL goLRJk"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice for someone who cannot change the language matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="sc-cSHVUG fzxnjC"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="sc-bdVaJa hrXKaN"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hZSUBg jxTZbJ"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cMhqgX cHLsZS sc-iuJeZd fBrmaE"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-esOvli gbGmFB"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-cmthru kwCHnT"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-hMFtBS EZLtK sc-cLQEGU buqZAj"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-gqPbQI hcLboy"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-hORach kABKUF"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-bMVAic bPYuue"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-bAeIUo ixmeCE sc-iujRgT hBLdJf"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-GMQeP fnYfQC"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-exAgwC jkFcTv"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cQFLBn fByWXk sc-gojNiO jsQwwt"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-daURTG jtFlNO"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-bXGyLb gHhYoN"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-lkqHmb lmawnj sc-eLExRp dHJRpL"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-cbkKFq gkKnoP"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-krvtoX LLlRw"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-fYiAbW bylkbv"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      . If this is not correct, contact your site administrator.
    </span>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hqyNC kMqGrs"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-jbKcbu iZapoO sc-dNLxif hAyoXz"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jqCOkK eEjZuO"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-uJMKN cjUNDK"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-bbmXgH hrqJxu sc-gGBfsJ hMVvyu"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jnlKLf Kefbd"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-fYxtnH HNNIH"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-tilXH iyYVPY"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-hEsumM bqMptW sc-ktHwxA eHMPWL"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-cIShpX fIsfSe"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kafWEX isaqBb"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-feJyhm dGQxDd sc-iELTvK dDAyMs"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-cmTdod hNIDYx"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-jwKygS leIywW"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-btzYZH jTuqhu sc-lhVmIH euTYlD"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-bYSBpT dtQOZM"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-elJkPf iugJdn"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-jtRfpW kwQWwL"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`the ContentAnalysis component with specified header level matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-jlyJG lbRNhQ"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-gipzik hZOojH sc-csuQGl kPWfBQ"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-Rmtcm jnrAfY"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-bRBYWo fDCyos"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-hzDkRC igquTG sc-jhAzac eVPDcq"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-fBuWsC fmNFRY"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-fMiknA QAork"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-dVhcbM jqYANl"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-eqIVtm eWdMXk sc-fAjcbJ dLmCwH"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-caSCKo gRLUbH"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-gisBJw gjHRrX"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kjoXOD bCoNvk sc-cHGsZl eAbXNr"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-TOsTZ gcTxEf"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-kgAjT lcGLGs"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cJSrbW eBuJTp sc-ksYbfQ eqynDy"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-hmzhuo dBIhGk"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-frDJqD lgjFPt"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-kvZOFW lmfjVP"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`the ContentAnalysis component without language notice matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kAzzGY cJSrb"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-chPdSV hbfLss sc-kgoBCf ePqMlV"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-kGXeez dycyvO"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kpOJdX iIoguF"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-dxgOiQ kJTTdB sc-ckVGcZ kpGfBi"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jKJlTe iWijFp"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-eNQAEJ hrsyaF"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hMqMXs ecLisl"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kEYyzF jvMdMW sc-kkGfuU hUQWkd"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-iAyFgw dxsVcu"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hSdWYo bKTvCY"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-eHgmQL ekrFhI sc-cvbbAY cgvJhm"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jWBwVP iWOFgF"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-brqgnP ejPAly"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cMljjf bwytmp sc-jAaTju giCts"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jDwBTQ dwCWgf"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-gPEVay dDkdyd"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-iRbamj jVMxpg"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;
